# divy2_description

./: CMakeLists.txt  CMakeLists_origine.txt  CMakeLists_v1.txt  README.md  package.xml
launch/: upload_divy2.launch  upload_divy2_origine.launch
meshes/: propeller.dae
nv/: envoi.py  gamepad.py  simbis.py
robots/: default.xacro
scripts/: Game_Pub.py  Mod_geom.py
src/: Mod_geom.py  Moteur_Suscriber.py  Simulation.py  ancien.py  gazepub.py
src/adafruit_bus_device/: i2c_device.py
urdf/: actuators.xacro  actuators.xacro.old  base.xacro  base.xacro.old  gazebo.xacro  sensors.xacro  sensors.xacro.old  snippets.xacro  snippets_origine.xacro
